# JNP_function_maxima

./: CMakeLists.txt  README.md  function_maxima.h  maxima_example.cc
info/: maksima_kryteria.txt  maksima_tresc.txt  wyjasnienia.txt
